--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(ProgrammingMeritBadgeCode)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(ProgrammingMeritBadgeCode
-    "5A/5A-Sample Program.cpp")
+    "5A/5A-Sample Program.cpp"
+        "5A/5A-Sample Program-Modified.cpp")
